# Summarizer

./: .gitignore  README.md  dspy_wp_summarizer.py  dspy_yt_summarizer.py  pyproject.toml  requirements.txt  ui.py  utils.py  webpage_summarizer.py  youtube_summarizer.py
