[project]
name = "local-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dspy>=2.6.22",
    "gradio>=5.29.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "youtube-transcript-api>=1.0.3",
]
